Fixed code caption color in dark mode

--- a/css/grainy-dinosaurs.css
+++ b/css/grainy-dinosaurs.css
@@ -150,6 +150,7 @@ blockquote::after {
 div[class*="language-"] figure {
   margin-inline: 0;
   background-color: #f6f8fa;
+  color: var(--clr-primary-400);
   border: 1px solid var(--clr-neutral-400);
 }
 
